# py-microservice-template

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh
alembic/: env.py
alembic/versions/: 0bdd6c4bf1af_initial_migration.py  6f506483a8ac_auto_migration.py
api/: Dockerfile  api.py  deps.py  initial_data.py  main.py  pyproject.toml
api/core/: db.py
api/models/: __init__.py  tasks.py  users.py
api/routes/: health_check.py  tasks.py  users.py
api/scripts/: entrypoint.sh
api/src/: api.py  deps.py  initial_data.py  main.py  utils.py
api/src/alembic/: env.py
api/src/alembic/versions/: e25094ac1e79_initial_migration.py
api/src/core/: config.py  db.py
api/src/models/: __init__.py  tasks.py  users.py
api/src/models/shared/: mixins.py
api/src/routes/: health_check.py  tasks.py  users.py
scripts/: local_recreate.sh
